👷 ajout des builders docker

--- a/src/db/Dockerfile
+++ b/src/db/Dockerfile
@@ -1,4 +1,8 @@
-FROM ubuntu:latest
-LABEL authors="matth"
+FROM mysql:latest
 
-ENTRYPOINT ["top", "-b"]
+ENV MYSQL_ROOT_PASSWORD=root
+ENV MYSQL_DATABASE=bdd_projet_dp
+
+COPY migrations/v1_db_create.sql /docker-entrypoint-initdb.d/
+
+EXPOSE 3306
