--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,24 @@
 services:
-  mysql:
-    image: 'mysql:latest'
+  db:
+    image: bdd_projet
+    expose:
+      - "3306"
+    networks:
+      - backend
+
+  api:
+    image: projet_dp_api
+    depends_on:
+      - db
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/bdd_projet_dp
     ports:
-      - '3306'
+      - "8082:8082"
+    networks:
+      - backend
+
+networks:
+  backend:
+    driver: bridge
+    driver_opts:
+      com.docker.network.bridge.host_binding_ipv4: "127.0.0.1"
