--- a/src/api/main/resources/application.yaml
+++ b/src/api/main/resources/application.yaml
@@ -4,7 +4,6 @@ spring:
   security:
     jwt:
       secret-key: JWT_SECRET=Tp0*FFCrfeb4RJQ^c!yXZ!dVd@2M1rF1@$2^4cby8R3MGp^UgBEsfb2D8Qtk!qgj
-
   datasource:
     url: jdbc:mysql://localhost:3306/bdd_projet_dp
     username: projet_dp_user
@@ -23,6 +22,8 @@ spring:
 
 server:
   port: 8082
+  error:
+    include-stacktrace: never
 
 springdoc:
   swagger-ui:
