--- a/build.gradle
+++ b/build.gradle
@@ -34,17 +34,13 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-    // Jakarta
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
 
     //JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    // dotenv
-    implementation 'io.github.cdimascio:dotenv-java:3.1.0'
 }
 
 tasks.named('test') {
