--- a/src/api/main/resources/application.yaml
+++ b/src/api/main/resources/application.yaml
@@ -3,11 +3,11 @@ spring:
     name: projet_DP_API
   security:
     jwt:
-      secret-key: JWT_SECRET=Tp0*FFCrfeb4RJQ^c!yXZ!dVd@2M1rF1@$2^4cby8R3MGp^UgBEsfb2D8Qtk!qgj
+      secret-key: ${SPRING_JWT_SECRET}
   datasource:
-    url: jdbc:mysql://localhost:3306/bdd_projet_dp
-    username: projet_dp_user
-    password: projet_dp_pwd
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -16,6 +16,17 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migrations
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${SPRING_MAIL_USERNAME}
+    password: ${SPRING_MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
   profiles:
     active: '@environment@'
@@ -28,3 +39,8 @@ server:
 springdoc:
   swagger-ui:
     path: /
+
+logging:
+  level:
+    org.springframework.mail: DEBUG
+    org.eclipse.angus.mail: DEBUG
