--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,8 @@ dependencies {
 
     // mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'jakarta.mail:jakarta.mail-api:2.1.3' // Jakarta Mail implementation
+    implementation 'jakarta.mail:jakarta.mail-api:2.1.3'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 tasks.named('test') {
